--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div class="container">
     <h1>Hexagonator!</h1>
     <p class="credits">
-        Built by <a href="http://josetomastocino.com">JoséTomásTocino</a>
+        Built by <a href="http://josetomastocino.com">JoséTomásTocino</a><br>
+        Check the <a href="https://github.com/JoseTomasTocino/hexagonator">source code at Github</a>
     </p>
 
     <p class="example">
